# mysrc_sprs_backup

./: .gitignore  CLAUDE.md  README.md  gui_star_simulator.m  main_bayer_simulation.m  package.xml  setup.cfg  setup.py  stereo_gazebo_test_plan.md  test_all_sensor_combinations.m
.claude/: settings.local.json
config/: kari_arm_controllers.yaml  kari_dual_arm_controllers.yaml  lidar_mapping.rviz
core/: bayer_to_gray_direct.m  bayer_to_rgb_cfa.m  calculate_peak_snr.m  calculate_snr.m  detect_stars_simple.m  evaluate_centroid_accuracy.m  get_sensor_preset.m  rgb_to_gray_fpga.m  simulate_star_image_realistic.m
data/: Hipparcos_Below_6.0.csv  cmg_testbed_20260225_213753.csv
docs/: mars_hexacopter_design.md  stereo_test_guide.md
launch/: cmg_testbed.launch.py  cmg_testbed_test.launch.py  cubesat_cmg.launch.py  docking_sim.launch.py  experiment.launch.py  fm_fly.launch.py  gco_3d_test.py  gco_cam_test.launch.py  gco_lidar_mapping.launch.py  gco_test.launch.py  kari_arm.launch.py  kari_dual_arm.launch.py  lidar_mapping_test.launch.py  lidar_test.launch.py  lvlh_sim.launch.py  lvlh_sim_nogui.launch.py  mars_drone.launch.py  mars_hexacopter.launch.py  mars_hexacopter_cmg500_test.launch.py  mars_hexacopter_cmg_test.launch.py  pnp_test.launch.py  sat.launch.py  sat2.launch.py  sat3.launch.py  sat4.launch.py  sensor_viz_gco.launch.py  stereo_test.launch.py  x500_test.launch.py
models/: CLAUDE.md
orbit_sim/: CLAUDE.md  aruco_detector.py  aruco_simulator.py  cmg_testbed_commander.py  cmg_testbed_scenario.py  cubesat_cmg_commander.py  cubesat_cmg_controller.py  (+22 more)
(+103 files in other folders)
